--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "armyofmakers",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://andreagzz11.github.io/armyofmakers",
   "dependencies": {
     "animated": "^0.2.2",
     "react": "^16.5.2",
