--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "armyofmakers",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://andreagzz11.github.io/armyofmakers",
+  "homepage": "http://andreagzz11.github.io/ArmyofMakers",
   "dependencies": {
     "animated": "^0.2.2",
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
@@ -15,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
